<resources>
    <string name="app_name">Practica Pokemon</string>
    <string name="nombre_pokemon_placeholder">Pikachu</string>
    <string name="translate">Language</string>
    <string name="delete_pokemons">Delete my Pokemons</string>
    <string name="about">About…</string>
    <string name="close_session">Close session</string>
    <string name="about_msg">\nAlberto Alarcón López\nVersión 1.0.0</string>
    <string name="close_dialog">Close</string>
    <string name="my_pokemons_menu">My Pokemons</string>
    <string name="pokedex_menu">Pokedex</string>
    <string name="settings_menu">Settings</string>
    <string name="settings_title">SETTINGS</string>
    <string name="detail_name_placeholder">Name</string>
    <string name="detail_index_placeholder">Index</string>
    <string name="detail_type_placeholder">Type</string>
    <string name="detail_height_placeholder">Height</string>
    <string name="detail_weight_placeholder">Weight</string>
    <string name="index_text">Index: </string>
    <string name="type_text">Type: </string>
    <string name="height_text">Height: </string>
    <string name="weight_text">Weight: </string>
    <string name="delete_text">Delete</string>
    <string name="delete_msg"> deleted successfully</string>
    <string name="close_session_msg">Session closed successfully</string>
    <string name="login_error_msg">Login error</string>
    <string name="loading_pokemon_msg">Loading pokemon list</string>
    <string name="no_pokemon_msg">No Pokemon found in database</string>
    <string name="pokemon_get_error">Get Pokemon from database failed</string>
    <string name="api_call_failed">API response failed</string>
    <string name="detail_call_failed">Pokemon details get failed</string>
    <string name="no_pokemon_found_delete_msg">No Pokemon found with the specified ID</string>
    <string name="delete_failed_msg">Delete failed</string>
    <string name="pokemon_added_msg"> added to your list</string>
    <string name="pokemon_add_failed_msg">Pokemon add to list failed</string>
    <string name="pokemon_exists_msg">Pokemon already captured</string>
</resources>