<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="239dp"
        android:layout_height="292dp"
        android:layout_gravity="center"
        android:src="@drawable/pikachu" />


    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/detail_name_placeholder"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_text"/>
            <TextView
                android:id="@+id/detail_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_index_placeholder"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_text"/>
        <TextView
            android:id="@+id/detail_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_type_placeholder"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_text"/>
        <TextView
            android:id="@+id/detail_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_height_placeholder"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_text"/>
        <TextView
            android:id="@+id/detail_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_weight_placeholder"/>
    </LinearLayout>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_text"
        android:layout_marginTop="20dp"/>
</LinearLayout>